# RPN-Calc

./: .gitignore  CLI.c  CLI.h  CMakeLists.txt  Calculator.c  Calculator.h  Config.c  Config.h  File.h  LICENSE  Parser.c  Parser.h  README.md  Utils.c  Utils.h  main.c
deprecated/: GenericStack.c  GenericStack.h
include/: CLI.h  Calculator.h  File.h  Lexer.h  LinkedList.h  LinkedStack.h  Parser.h  Stack.h  Status.h  String.h  Utils.h
source/: CLI.c  Calculator.c  Config.c  Lexer.c  LinkedList.c  LinkedStack.c  Parser.c  Stack.c  Status.c  String.c  main.c
src/: CLI.c  File.c  LinkedList.c  LinkedStack.c  Status.c  String.c  Utils.c  main.c
structures/: LinkedList.c  LinkedList.h  LinkedStack.c  LinkedStack.h  Stack.c  Stack.h  Status.c  Status.h  String.c  String.h
structures/deprecated/: GenericStack.h
